RESOLVED FIXED41058
Can't see source when hitting debugger statement in evaled source
https://bugs.webkit.org/show_bug.cgi?id=41058
Summary Can't see source when hitting debugger statement in evaled source
Martin Häcker
Reported 2010-06-23 05:41:38 PDT
In this case it's function created at runtime in a js framework I think To be more precise it's a testcase in jspec <http://visionmedia.github.com/jspec/> so if you need to reduce further you can just place a 'debugger;' statement in one of the tests there.
Attachments
Patch (7.17 KB, patch)
2010-06-25 05:57 PDT, Yury Semikhatsky
no flags
Patch (7.76 KB, patch)
2010-06-25 06:29 PDT, Yury Semikhatsky
no flags
Martin Häcker
Comment 1 2010-06-23 05:41:55 PDT
I'd like to add that this works great in Safari 5
Yury Semikhatsky
Comment 2 2010-06-25 05:57:30 PDT
Yury Semikhatsky
Comment 3 2010-06-25 06:29:17 PDT
Yury Semikhatsky
Comment 4 2010-06-25 06:33:14 PDT
Comment on attachment 59763 [details] Patch Committed r61859
Note You need to log in before you can comment on or make changes to this bug.