2010-06-25  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Can't see source when hitting debugger statement in evaled source
        https://bugs.webkit.org/show_bug.cgi?id=41058

        Test: inspector/debugger-pause-in-eval-script.html

        * bindings/js/ScriptDebugServer.cpp:
        (WebCore::ScriptDebugServer::sourceParsed): use lexical global object to figure out
        where the script is compiled. Otherwise scripts typed in Web Inspector console will
        be treated as ones evaluated in the context of Web Inspector and won't appear in the
        scripts list.
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didParseSource): cache script sources for eval's too.

2010-06-25  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Can't see source when hitting debugger statement in evaled source
        https://bugs.webkit.org/show_bug.cgi?id=41058

        Test that debugger will stop at a debugger statement in code evaluated
        in Web Inspector console.

        * inspector/debugger-pause-in-eval-script-expected.txt: Added.
        * inspector/debugger-pause-in-eval-script.html: Added.


Canonical link: https://commits.webkit.org/52859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61859 268f45cc-cd09-0410-ab3c-d52691b4dbfc